Actualiza entrada de diadema, se arregla boton de limpiar todo

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME=Laravel
-APP_ENV=local
+APP_ENV=production
 APP_KEY=base64:WXl7HpwrjN6H3qjXxbgTBlBA8cCL4GM0AY79U6sK2F4=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
 
