--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "scripts": {
         "dev": "vite",
         "build": "vite build",
-        "watch": "vite build --watch"
+        "watch": "vite build --watch",
+        "prod": "--mix production"
     },
     "devDependencies": {
         "@popperjs/core": "^2.11.6",
