--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "vue": "^3.4.27"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^6.5.2",
         "laravel-mix": "^6.0.49",
         "sweetalert2": "^11.11.0",
         "vuex": "^4.1.0"
