--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "barryvdh/laravel-snappy": "^1.0",
         "laravel/framework": "^11.0",
         "laravel/tinker": "^2.9",
-        "laravel/ui": "^4.5"
+        "laravel/ui": "^4.5",
+        "tecnickcom/tcpdf": "^6.7"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
