--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "devDependencies": {
         "@popperjs/core": "^2.11.6",
         "@vitejs/plugin-vue": "^4.5.0",
-        "axios": "^1.6.4",
+        "axios": "^1.7.3",
         "bootstrap": "^5.3.3",
         "laravel-vite-plugin": "^1.0",
         "sass": "^1.56.1",
@@ -18,8 +18,11 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.5.2",
+        "@fortawesome/free-solid-svg-icons": "^6.6.0",
+        "@fortawesome/vue-fontawesome": "^3.0.8",
+        "feather-icons": "^4.29.2",
         "laravel-mix": "^6.0.49",
-        "sweetalert2": "^11.11.0",
+        "sweetalert2": "^11.12.4",
         "vuex": "^4.1.0"
     }
 }
