--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "devDependencies": {
         "@popperjs/core": "^2.11.6",
         "@vitejs/plugin-vue": "^4.5.0",
+        "autoprefixer": "^10.4.20",
         "axios": "^1.7.3",
         "bootstrap": "^5.3.3",
         "laravel-vite-plugin": "^1.0",
+        "postcss": "^8.4.41",
         "sass": "^1.56.1",
+        "tailwindcss": "^3.4.7",
         "vite": "^5.0",
         "vue": "^3.4.27"
     },
