--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@fortawesome/fontawesome-free": "^6.5.2",
         "@fortawesome/free-solid-svg-icons": "^6.6.0",
         "@fortawesome/vue-fontawesome": "^3.0.8",
+        "@slim-select/vue": "^1.6.0",
         "feather-icons": "^4.29.2",
         "laravel-mix": "^6.0.49",
         "sweetalert2": "^11.12.4",
